Bug 51582 - EDITING: BACKSPACE in cell with hyphenation will CRASH
Summary: EDITING: BACKSPACE in cell with hyphenation will CRASH
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
3.6.0.0.beta1
Hardware: Other Windows (All)
: medium major
Assignee: Kohei Yoshida
URL:
Whiteboard: target:3.6 target:3.7.0 target:3.6.0....
Keywords: regression
Depends on:
Blocks: mab3.6
  Show dependency treegraph
 
Reported: 2012-06-30 01:31 UTC by gerdl
Modified: 2012-07-02 10:37 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
calc file with one cell to type backspace and crash (9.79 KB, application/vnd.oasis.opendocument.spreadsheet)
2012-06-30 01:31 UTC, gerdl
Details

Note You need to log in before you can comment on or make changes to this bug.
Description gerdl 2012-06-30 01:31:52 UTC
Created attachment 63630 [details]
calc file with one cell to type backspace and crash

open an new calc, type some text into one of the cells.
choose alignment: wrap text automatically, select hyphenation active,
in main menu options selevt under calc: press enter to switch to edit mode.
german hyphenation is set by dict de frami 2011-06-03

example is attended.
tested with win7-64
and 3600-beta2-27-06-2012 also with the previous versions

no problems when using 3.5.rc2

thank you.
Comment 1 gerdl 2012-06-30 01:33:05 UTC
excuse me, version means 3.6.0 beta 2
Comment 2 Rainer Bielefeld Retired 2012-06-30 01:56:40 UTC
[Reproducible] reporter's sample and with Server Installation of  "LibreOffice 3.6.0.0.beta2  German UI/Locale [Build-ID: f010139] on German WIN7 Home Premium (64bit) 

@gerdl
So please simply modify the Version
Comment 3 Rainer Bielefeld Retired 2012-06-30 02:11:46 UTC
[Reproducible] with Server Installation of  "LibreOffice 3.6.0beta1  German UI/Locale [Build-ID: 1f1cdd8] on German WIN7 Home Premium (64bit) 

Also crashes with <Del> and <Backspace> anywhere else after hyphenation.

NOT  reproducible with reporter's sample, text replaced by spanish text from Qikipedia and spanish language, parallel installation of Master "LOdev " 3.7.0.0.alpha0+   - WIN7 Home Premium (64bit) ENGLISH UI [Build ID: 3985521]" (tinderbox: W2008R2@16-minimal_build, pull time 2012-06-24). May be Spanish hyphenation not supported? 

@Markus:
One for you?
Comment 4 Markus Mohrhard 2012-06-30 05:05:27 UTC
> @Markus:
> One for you?

Looks like one for Kohei.

@Kohei: I'm getting a SIGABRT in editeng, maybe you have an idea.
Comment 5 Kohei Yoshida 2012-07-02 06:49:56 UTC
My area.
Comment 6 Not Assigned 2012-07-02 10:30:56 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6cf78c72be5f8f1b0a037b03a6fc63cbace0a2d9

fdo#51582: Avoid double deletion of a text portion.
Comment 7 Kohei Yoshida 2012-07-02 10:35:29 UTC
Fixed.  It was simply due to a double deletion.
Comment 8 Not Assigned 2012-07-02 10:37:52 UTC
Kohei Yoshida committed a patch related to this issue.
It has been pushed to "libreoffice-3-6":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=efaeb259a719f3fa37e16f393f5c71124ae80a75&g=libreoffice-3-6

fdo#51582: Avoid double deletion of a text portion.


It will be available in LibreOffice 3.6.