fdo#51582: Avoid double deletion of a text portion.

Change-Id: Ia1c31cc8122c99a7e37bc285f61f8c5d2779b577